# Stellara_Contracts

Backend/src/: app.module.ts
Backend/src/logging/: correlation-id.middleware.ts  error-tracking.service.ts  structured-logger.service.ts
Contracts/: Cargo.toml
Contracts/contracts/cross-chain-router/src/: lib.rs
Contracts/contracts/did-registry/src/: lib.rs
Contracts/contracts/trading/src/: storage.rs
Contracts/integration-tests/tests/: cross_contract.rs
