[workspace]
members = [
    "contracts/token",
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/academy",
    "contracts/academy-rewards",
    "shared",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
# Align with derive expectations in stellar-xdr when "arbitrary" is enabled.
arbitrary = "1.4.2"
